--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bytemuck = "1.21.0"
 cpal = "0.15.3"
+rodio = "0.20.1"
+tokio = { version = "1.42.0", features = ["full"] }
+tokio-tungstenite = "0.26.1"
+tungstenite = "0.26.1"
