--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.95"
 bytemuck = "1.21.0"
 cpal = "0.15.3"
+futures = "0.3.31"
+futures-util = "0.3.31"
 opus = "0.3.0"
+rand = "0.8.5"
 rodio = "0.20.1"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-tungstenite = "0.26.1"
