--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ futures = "0.3.31"
 futures-util = "0.3.31"
 opus = "0.3.0"
 rand = "0.8.5"
+ringbuf = "0.4.7"
 rodio = "0.20.1"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-tungstenite = "0.26.1"
